<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <LinearLayout
        android:id="@+id/Dock"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:divider="@drawable/empty_tall_divider2"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.marea_binario.rpg_lallavedelhorizonte.objeto.Item
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </com.marea_binario.rpg_lallavedelhorizonte.objeto.Item>

        <com.marea_binario.rpg_lallavedelhorizonte.objeto.Item
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.marea_binario.rpg_lallavedelhorizonte.objeto.Item
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </com.marea_binario.rpg_lallavedelhorizonte.objeto.Item>

        <com.marea_binario.rpg_lallavedelhorizonte.objeto.Item
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </com.marea_binario.rpg_lallavedelhorizonte.objeto.Item>

    </LinearLayout>

    <com.marea_binario.rpg_lallavedelhorizonte.SuperText
        android:id="@+id/dineros"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:gravity="center|center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinerosImg" />

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/fondos"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/imgJugador"
        app:layout_constraintStart_toStartOf="@+id/dineros"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <ImageView
        android:id="@+id/imgJugador"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/imagen_jugador"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dinerosImg" />

    <com.marea_binario.rpg_lallavedelhorizonte.SuperText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/imgJugador"
        app:layout_constraintStart_toStartOf="@+id/imgJugador"
        app:layout_constraintTop_toBottomOf="@+id/imgJugador" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/Dock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewVitalidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vitalidad" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/vitalidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewResistencia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resistencia" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/resistencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewFuerza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fuerza" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/fuerza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewVelocidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/velocidad" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/velocidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewInteligencia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inteligencia" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/inteligencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewPunteria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/punteria" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/punteria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewMagia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/magia" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/magia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/textViewDestreza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/destreza" />

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/destreza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/dinerosImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/dineros_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reloadPlayer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:padding="13dp"
        app:icon="@android:drawable/stat_notify_sync_noanim"
        app:layout_constraintBottom_toBottomOf="@+id/imgJugador"
        app:layout_constraintEnd_toStartOf="@+id/imgJugador"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/modDinerosP"
        app:layout_constraintTop_toTopOf="@+id/imgJugador"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/modDinerosP"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:padding="8dp"
        app:icon="@android:drawable/ic_input_add"
        app:iconTint="@color/md_theme_light_onTertiary"
        app:layout_constraintBottom_toBottomOf="@+id/reloadPlayer"
        app:layout_constraintStart_toEndOf="@+id/dinerosImg"
        app:layout_constraintTop_toTopOf="@+id/reloadPlayer"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/dipositoObjetosBut"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        app:icon="?android:attr/actionModeFindDrawable"
        app:layout_constraintBottom_toTopOf="@+id/fondo"
        app:layout_constraintEnd_toStartOf="@+id/imgJugador"
        app:layout_constraintStart_toEndOf="@+id/dinerosImg"
        app:layout_constraintTop_toBottomOf="@+id/reloadPlayer"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>