<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <Button
        android:id="@+id/showEst"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="14dp"
        app:icon="@android:drawable/arrow_down_float"
        app:iconSize="20dp"
        app:iconTint="@color/md_theme_light_onTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.marea_binario.rpg_lallavedelhorizonte.SuperText
        android:id="@+id/nomPerEst"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="Nombre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/showEst"
        app:layout_constraintEnd_toStartOf="@+id/showEst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showEst" />

    <ScrollView
        android:id="@+id/modEst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomPerEst">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerVitalidadTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modVitalidad"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerResistenciaTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modResistencia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerFuerzaTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modFuerza"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerVelocidadTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modVelocidad"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerInteligenciaTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modInteligencia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerPunteriaTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modPunteria"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.marea_binario.rpg_lallavedelhorizonte.SuperText
                    android:id="@+id/superText8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/newPerMagiaTxt"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/modMagia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:text="0" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/acceptEst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aceptar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/modEst"
        app:layout_constraintStart_toStartOf="@+id/modEst"
        app:layout_constraintTop_toBottomOf="@+id/modEst" />

</androidx.constraintlayout.widget.ConstraintLayout>