<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginRight="24dp"
    android:background="@drawable/dialog_bg"
    android:backgroundTint="@color/md_theme_light_secondaryContainer">

    <Button
        android:id="@+id/subOne"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="12dp"
        android:paddingTop="1dp"
        android:paddingRight="12dp"
        android:paddingBottom="1dp"
        android:text="-"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addOne"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="12dp"
        android:paddingTop="1dp"
        android:paddingRight="12dp"
        android:paddingBottom="1dp"
        android:text="+"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/howMuch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/howMuch" />

    <TextView
        android:id="@+id/howMuch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:text="1"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/subOne"
        app:layout_constraintEnd_toStartOf="@+id/addOne"
        app:layout_constraintStart_toEndOf="@+id/subOne"
        app:layout_constraintTop_toTopOf="@+id/subOne" />

    <Button
        android:id="@+id/acceptBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/md_theme_dark_inversePrimary"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toTopOf="@+id/showImg"
        app:layout_constraintEnd_toStartOf="@+id/reLoad"
        app:layout_constraintStart_toEndOf="@+id/turnBack"
        app:layout_constraintTop_toTopOf="@+id/divCant" />

    <View
        android:id="@+id/divCant"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howMuch" />

    <TextView
        android:id="@+id/escojeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/paraQuien"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/addOne"
        app:layout_constraintStart_toStartOf="@+id/subOne"
        app:layout_constraintTop_toBottomOf="@+id/divCant" />

    <RadioGroup
        android:id="@+id/forWho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/acceptBut"
        app:layout_constraintEnd_toEndOf="@+id/addOne"
        app:layout_constraintStart_toStartOf="@+id/subOne"
        app:layout_constraintTop_toBottomOf="@+id/escojeTV" />

    <Button
        android:id="@+id/turnBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="@+id/acceptBut"
        app:layout_constraintStart_toStartOf="@+id/subOne"
        app:layout_constraintTop_toTopOf="@+id/acceptBut"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/reLoad"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:visibility="gone"
        app:icon="@android:drawable/stat_notify_sync"
        app:layout_constraintBottom_toBottomOf="@+id/acceptBut"
        app:layout_constraintEnd_toEndOf="@+id/addOne"
        app:layout_constraintTop_toTopOf="@+id/acceptBut"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/showImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/divShow"
        app:layout_constraintStart_toStartOf="@+id/divShow" />

    <View
        android:id="@+id/divShow"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/showImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceptBut" />
</androidx.constraintlayout.widget.ConstraintLayout>